2014-02-19  Michael Hudson-Doyle  <michael.hudson@linaro.org>

	 PR target/59799
	* config/aarch64/aarch64.c (aarch64_pass_by_reference): The rules for
	passing arrays in registers are the same as for structs, so remove the
	special case for them.

2014-02-19  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (expand_expr_real_1) <case VIEW_CONVERT_EXPR>: For a bit-field
	destination type, extract only the valid bits if the source type is not
	integral and has a different mode.

2014-02-19  Richard Biener  <rguenther@suse.de>

	PR ipa/60243
	* tree-inline.c (estimate_num_insns): Avoid calling cgraph_get_node
	for all calls.

2014-02-19  Richard Biener  <rguenther@suse.de>

	PR ipa/60243
	* ipa-prop.c: Include stringpool.h and tree-ssanames.h.
	(ipa_modify_call_arguments): Emit an argument load explicitely and
	preserve virtual SSA form there and for the replacement call.
	Do not update SSA form nor free dominance info.

2014-02-18  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (function_and_variable_visibility): Also clear WEAK
	flag when disolving COMDAT_GROUP.

2014-02-18  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.h (ipa_ancestor_jf_data): Update ocmment.
	* ipa-prop.c (ipa_set_jf_known_type): Return early when
	not devirtualizing.
	(ipa_set_ancestor_jf): Set type to NULL hwen it is not preserved;
	do more sanity checks.
	(detect_type_change): Return true when giving up early.
	(compute_complex_assign_jump_func): Fix type parameter of
	ipa_set_ancestor_jf.
	(compute_complex_ancestor_jump_func): Likewise.
	(update_jump_functions_after_inlining): Fix updating of
	ancestor function.
	* ipa-cp.c (ipa_get_jf_ancestor_result): Be ready for type
	to be NULL.

2014-02-18  Jan Hubicka  <hubicka@ucw.cz>

	* cgraph.c (cgraph_update_edges_for_call_stmt_node): Also remove
	inline clones when edge disappears.

2014-02-18  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/60203
	* config/rs6000/rs6000.md (mov<mode>_64bit, TF/TDmode moves):