@@ -1,5 +1,6 @@
 /* PR target/60205 */
-/* { dg-options "-O2 -mno-avx512f -Wno-psabi" } */
+/* { dg-prune-output "ABI for passing parameters" } */
+/* { dg-options "-O2 -mno-avx512f" } */
 /* { dg-skip-if "no AVX512F vector" { *-*-mingw* } } */
 
 typedef int __v16si __attribute__ ((__vector_size__ (64)));
